--- a/UFO-level-1/static/style.css
+++ b/UFO-level-1/static/style.css
@@ -8,6 +8,8 @@ footer {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-variant: small-caps;
     text-align: center;
+    background-image: linear-gradient(#29366e, silver, #29366e);
+    color: #29366e;
 }
 
 .navbar {
@@ -45,4 +47,8 @@ footer {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding-bottom: 1em;
     text-decoration: underline;
+}
+
+#table-area {
+    background-color: silver;
 }
